# email-vault-backend

./: .env.secrets  .env.secrets.example  Dockerfile  README.md  app.py  docker-compose.yml  local.env  pyproject.toml  secrets.env  secrets.env.example
flask/: app.py
flask/controllers/: register.py
flask/models/: database.py  users.py
flask/routes/: router.py
services/email_transmitter/: config.json
