[tool.poetry]
name = "email-vault-backend"
version = "0.1.0"
description = "Ecor Rouge Test Project"
authors = ["Axel"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
flask-cors = "^5.0.0"
rococo = "^1.0.23"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
